# GitMergeEnv-

./: .env.example  .gitignore  .openclaude-profile.json  AGENTS.md  Dockerfile  README.md  Rules.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py  grader.py  requirements.txt
server/tasks/: __init__.py  task1.py  task2.py  task3.py
