[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "git_merge_env"
version = "0.1.0"
description = "OpenEnv environment for git merge conflict resolution"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "openenv-core==0.2.1",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "openai==2.7.2",
]

[project.optional-dependencies]
dev = ["pytest==8.3.2", "pytest-asyncio==0.23.8", "httpx==0.28.1"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
